wegas-app/src/main/webapp/wegas-mcq/css/wegas-mcq-view.css
/*
 * Wegas
 * http://wegas.albasim.ch
 *
 * Copyright (c) 2013, 2014, 2015 School of Business and Engineering Vaud, Comem
 * Licensed under the MIT License
 */
/**
 * Question
 */

.wegas-mcqview .mcq-question {
    padding: 0 6px 10px 6px;
    position: relative;
    height: 100%;
}

.wegas-mcqview .mcq-question-title {
    font-weight: bold;
    font-size: 13px;
    margin-bottom: 10px;
    border-bottom: 1px solid lightgray;
}

.wegas-mcqview .mcq-question-details {
    /* margin-bottom: 20px; */
    margin-bottom: 8px;
}


/*
 * Choice details
 */
.wegas-mcqview .mcq-choices-vertical,
.wegas-mcqview .mcq-choices {
    display: table;
    box-sizing: border-box;
    border-collapse: separate;
    border-spacing: 0 15px;
    margin-top: -10px;
    margin-bottom: -10px;
    width: 100%;
    text-align: left;
}
.wegas-mcqview .mcq-choices-horizontal {
    display: table;
    border-collapse: separate;
    border-spacing: 4px 0;
    width: 100%;
    text-align: center;
}
.wegas-mcqview .mcq-choices .mcq-choice-vertical,
.wegas-mcqview .mcq-choices-horizontal .mcq-choice-horizontal,
.wegas-mcqview .mcq-choices-horizontal .mcq-last-horizontal,
.wegas-mcqview .mcq-choices-vertical .mcq-choice-vertical,
.wegas-mcqview .mcq-choices-vertical .mcq-last-vertical {
    display: table-row;
    width: 100%;
}
.wegas-mcqview .mcq-choice-horizontal .mcq-choice:hover,
.wegas-mcqview .mcq-choice-vertical:hover,
.wegas-mcqview .mcq-choice-vertical .mcq-choice:hover {
    background-color: rgb(245,245,245);
}

.wegas-mcqview .mcq-choices-vertical-checkbox,
.wegas-mcqview .mcq-choices-vertical-submit,
.wegas-mcqview .mcq-choice-vertical {
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
}


.wegas-mcqview .mcq-choice-horizontal .mcq-choice {
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
}

.wegas-mcqview .mcq-choices-vertical-checkbox,
.wegas-mcqview .mcq-choices-vertical-submit {
    position: relative;
    display: table-cell;
    text-align: center;
    vertical-align: top;
    white-space: nowrap;
    border: 1px solid #d8d9dd;
    border-left: none;
    border-bottom-width: 3px;
}
.wegas-mcqview .mcq-choices-vertical-checkbox.nodescr,
.wegas-mcqview .mcq-choices-vertical-submit.nodescr {
    background: #d8d9dd;
    vertical-align: baseline;
}
.wegas-mcqview .mcq-choices-vertical-submit.notitle.nodescr {
    background: transparent;
    vertical-align: baseline;
    border: none;
}
.wegas-mcqview .mcq-choices-vertical-finalsubmit {
    display: table-cell;
    text-align: center;
    vertical-align: bottom;
}
.wegas-mcqview .mcq-choices-horizontal-finalsubmit {
    display: table-cell;
    text-align: right;
    vertical-align: bottom;
}
.wegas-mcqview .mcq-choices-horizontal-finalsubmit .yui3-button {
    margin-top: 20px;
    margin-right: 5px;
}
.wegas-mcqview .mcq-finalsubmit {
    width: 100%;
    height: 24px;
    box-sizing: border-box;
    padding: 20px;
    position: relative;
}

.wegas-mcqview .mcq-finalsubmit .yui3-button {
    right: 0;
    position: absolute;
}


.wegas-mcqview .mcq-choices-horizontal .mcq-choice {
    display: table-cell;
    width: 100%;
    margin: 0 10px;
    border: 1px solid #d8d9dd;
    border-bottom-width: 3px;
}
/* .wegas-tabview .mcq-choice-vertical .mcq-choice-namedescr, */
.wegas-mcqview .mcq-choice-vertical .mcq-choice {
    display: table-cell;
    width: 82%;
    border: 1px solid #d8d9dd;
    border-right: none;
    border-bottom-width: 3px;
}
.wegas-mcqview .mcq-choice-name {
    line-height: 35px;
    background: #d8d9dd;
}
.wegas-mcqview .mcq-choice.notitle {
    border: none;
}
.wegas-mcqview .mcq-choice-name.notitle {
    line-height: 35px;
    background: transparent;
}
.wegas-mcqview .mcq-choices-vertical-submit.spurned,
.wegas-mcqview .mcq-choices-vertical-checkbox.spurned,
.wegas-mcqview .mcq-choice.spurned {
    background: #eeeeee;
    color: #aaa;
}
.wegas-mcqview .mcq-choices-vertical-submit.spurned .mcq-choice-name,
.wegas-mcqview .mcq-choices-vertical-checkbox.spurned .mcq-choice-name,
.wegas-mcqview .mcq-choices-vertical-checkbox.spurned.nodescr,
.wegas-mcqview .mcq-choices-vertical-submit.spurned.nodescr,
.wegas-mcqview .mcq-choice.spurned .mcq-choice-name {
    background: #d0d0d0;
    color: #999;
}
.wegas-mcqview .mcq-choice.spurned .mcq-choice-description {
    color: #aaa;
}
.wegas-mcqview .mcq-choice-vertical .mcq-choice-name,
.wegas-mcqview .mcq-choice-vertical .mcq-choice-description {
    padding-left: 10px;
    padding-right: 20px;
    min-height: 24px;
}
.wegas-mcqview .mcq-choice-description {
    padding-top: 5px;
    padding-bottom: 5px;
    color: #333333;
}
.wegas-mcqview .mcq-question button {
    display: inline-block;
    position: relative;
    background: #69bd7f;
    text-transform: uppercase;
    height: 24px;
    margin: 2px 5px 4px 0;
    font-size: 11px;
    font-weight: bold;
    padding: 4px 8px 4px 24px;
    border-radius: 6px;
    color: white;
    transition: .3s;
}
.wegas-mcqview .mcq-question button:before {
    content:"\f00c";
    font-family:"FontAwesome";
    /*display:block;*/
    position:absolute;
    width:24px;
    height:24px;
    text-align:center;
    line-height:24px;
    font-size:11px;
    top:0;
    left:0;
}
.wegas-mcqview .mcq-question button:disabled {
    visibility: hidden;
}
.wegas-mcqview .mcq-question button:hover {
    background:#4f8c5f;
    color: rgb(255, 255, 204);
}
.wegas-mcqview .mcq-choices-vertical-submit .numberOfReplies {
    color: #999;
    padding: 0 5px 7px;
    display: inline-block;
    vertical-align: bottom;
}
.wegas-mcqview .mcq-choices-vertical .mcq-checkbox-container,
.wegas-mcqview .mcq-choices .mcq-checkbox-container {
    position: absolute;
    width: 100%;
    bottom: 0;
}
.wegas-mcqview .mcq-checkbox {
    -webkit-transform: scale(1.4);
    -o-transform: scale(1.4);
    transform: scale(1.4);
    -moz-transform: scale(1.1); /* blurred, don't zoom more */
    -ms-transform: scale(1.3);
    cursor: pointer;
}
.wegas-mcqview .mcq-choices-horizontal .mcq-checkbox { /* For checkboxes and radio boxes presented horizontally (tabular) */
    text-align: center;
    margin-top: 5px;
}


/**
 * Choice replies
 */
.wegas-mcqview .mcq-replies-section {
    margin-top: 15px;
}
.wegas-mcqview .mcq-replies {
    /* padding: 0 10px; */
}

.wegas-mcqview .mcq-replies-title {
    font-weight: bold;
    font-size: 13px;
    margin-bottom: 6px;
    border-bottom: 1px solid lightgray;
}

.wegas-mcqview .mcq-replies .mcq-reply:first-child {
    color: black;
    font-style: normal;
}
.wegas-mcqview .mcq-replies .mcq-reply:last-child {
    border-bottom: none;
}

.wegas-mcqview .mcq-reply {
    margin: 0 10px 6px 10px;
    color: #999;
    font-style: italic;
    border-bottom: 1px solid lightgray;
    padding-bottom: 6px;
}

.wegas-mcqview .mcq-reply-title {
    font-weight: bold;
}



/* Corrections for new question layout (Jan. 2016) */
.wegas-mcqview .mcq-question .yui3-button {
    vertical-align: middle;
}
.wegas-mcqview .mcq-choices .mcq-checkbox-container {
    position: relative;
    bottom: -2px;
}

.wegas-mcqview .numberOfReplies {
    line-height: normal !important;
}
/* EOF  Corrections for new question layout (Jan. 2016) */

